<resources>
    <string name="app_name">PrimeraClaseApp</string>
    <string name="Edit_Text1">Digite la cédula</string>
    <string name="Edit_Text2">Digite el nombre </string>
    <string name="Edit_Text3">Digite la dirección</string>
    <string name="Edit_Text4">Digite la profesión</string>
    <string name="Edit_Text5">Digite fecha</string>
    <string name="Button">Registrar</string>
    <string name="Button1">Siguiente</string>
    <string name="Button2">Anterior</string>
    <string name="Button3">Buscar</string>
    <string name="Button4">Modificar</string>
    <string name="Button5">Eliminar</string>
    <string name="Edit_Text6">Búsqueda por CC</string>
    <string name="Button6">Limpiar</string>


</resources>